[project]
name = "nebula3-python"
version = "3.8.2"
description = "Python client for NebulaGraph v3"
authors = [
    {name = "vesoft-inc", email = "info@vesoft.com"},
]
dependencies = [
    "future>=1.0.0",
    "httplib2>=0.31.0",
    "pytz>=2025.2",
    "six>=1.17.0",
    "httpx[http2]>=0.22.0",
    "legacy-cgi>=2.6.3; python_version >= \"3.10\"",
]
requires-python = ">=3.6.2"
readme = "README.md"
license = {text = "Apache 2.0"}

[project.urls]
Homepage = "https://github.com/vesoft-inc/nebula-python"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
extend-exclude = '''
/(
    nebula3/common
  | nebula3/storage
  | nebula3/graph
  | nebula3/meta
  | nebula3/common
  | nebula3/fbthrift
  | docs/source
)/
'''

[tool.pdm]
distribution = true
[tool.pdm.build]
includes = ["nebula3"]

[tool.pdm.scripts]
fmt = "black -S ."
fmt-check = "black -S --check ."
test = 'pytest -s -v -k "not SSL" --cov=nebula3/ --cov-report=xml --cov-append'
test-ssl = 'pytest -s -v -k "SSL" --cov=nebula3/ --cov-report=xml --cov-append'


[dependency-groups]
dev = [
    "black>=22.8.0",
]
example = [
    "prettytable>=3.16.0; python_version >= \"3.10\"",
    "pandas>=2.3.2; python_version >= \"3.10\"",
]
test = [
    "pytest>=7.4.4; python_full_version >= \"3.7.1\"",
    "pytest-cov>=4.1.0; python_full_version >= \"3.7.1\"",
]
